--- a/09 aula/css/cadastro-usuario.css
+++ b/09 aula/css/cadastro-usuario.css
@@ -21,6 +21,7 @@
 /*Cabeçalho*/
 .grid-container header{
     grid-column: 1 / span 2;
+    
 }
 
 .grid-cabecalho{
@@ -35,15 +36,41 @@
     padding: .5em;
 }
 
-.grid-cabecalho .usuario{
+.grid-cabecalho .barra-titulo{
+    display:grid;
+    grid-template-columns: 75% 25%;
     background-color:var(--color-cabecalho);
     padding: .5em;
 }
 
+
+
 /*barra lateral*/
 aside{
-    padding: 1em;
+    margin-top: 0.4em;
     background-color: var(--color-aside-dark);
+   
+}
+
+aside .logo{
+    height: 4em;
+    color: white;
+    padding-left: .5em;
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
+
+aside .menu{
+    height: 2em;
+    color: green;
+    background-color: black;
+    padding: .5em;
+}
+
+aside .usuarios{
+    height: 2em;
+    color: white;
+    padding: .5em;
 }
 
 
@@ -52,11 +79,26 @@ aside{
     display:grid;
     grid-template-columns: 60% 40%;
     grid-template-rows: 10% 90%;
+    margin-top: 0.4em;
+
 }
 
-.grid-principal .usuarios{
+.grid-principal .titulo{
     grid-column: 1 / span 2;
-    
+    display: grid;
+    grid-template-columns: 50% 50%;
+    background-color: azure;
+}
+
+.titulo .direita{
+    margin-right: 3em;
+    margin-top: 1em;
+    text-align: right;
+}
+
+.titulo .esquerda{
+    margin-left: 1em;
+    margin-top: 1em;
 }
 
 .grid-principal aside{
@@ -74,10 +116,29 @@ aside{
     
 }
 
+/* Novos usuarios*/
+.novos-usuarios{
+    display:grid;
+    grid-template-columns: 50% 50%;
+    
+}
+
+.novos-usuarios > div{
+    height: 5em;
+    border: 1px solid black;
+    margin: 0 1em;
+}
+
+
+#icone{
+    max-height: 1em;
+    margin-bottom: .3em;
+}
 
 #icone > div{
     background-color:white;
-    height: .2em;
+    height: .15em;
     width: 1.5em;
     margin: .3em;
+    
 }
